--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -2,9 +2,18 @@
 	margin: 0;
 }
 
+body{
+    background-color: #fafafa;
+}
+
 .app__header{
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-bottom: 20px;
+}
+
+.app__stats{
+    display: flex;
+    justify-content: space-between;
 }
