--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -2,18 +2,38 @@
 	margin: 0;
 }
 
-body{
-    background-color: #fafafa;
+body {
+	background-color: #fafafa;
 }
 
-.app__header{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 20px;
+.app {
+	display: flex;
+	justify-content: space-evenly;
+	padding: 2rem;
 }
 
-.app__stats{
-    display: flex;
+.app__left {
+    flex: 0.9;
+}
+
+.app__right {
+	height: 90vh;
+}
+
+.app__header {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	margin-bottom: 20px;
+}
+
+.app__stats {
+	display: flex;
     justify-content: space-between;
+}
+
+@media (max-width: 990px) {
+	.app {
+		flex-direction: column;
+	}
 }
