--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -13,11 +13,7 @@ body {
 }
 
 .app__left {
-    flex: 0.9;
-}
-
-.app__right {
-	height: 90vh;
+	flex: 0.9;
 }
 
 .app__header {
@@ -29,11 +25,20 @@ body {
 
 .app__stats {
 	display: flex;
-    justify-content: space-between;
+	justify-content: space-between;
 }
 
 @media (max-width: 990px) {
 	.app {
 		flex-direction: column;
+	}
+}
+
+.app__right {
+	height: 90vh;
+	display: flex;
+	flex-direction: column;
+	h3 {
+		padding: 10px;
 	}
 }
