--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -26,6 +26,15 @@ body {
 .app__stats {
 	display: flex;
 	justify-content: space-between;
+	> div:nth-child(1) > div > div > h2 {
+		color: #cc1034;
+	}
+	> div:nth-child(2) > div > div > h2 {
+		color: #2da116;
+	}
+	> div:nth-child(3) > div > div > h2 {
+		color: #777777;
+	}
 }
 
 @media (max-width: 990px) {
