--- a/src/style/InfoBox.css
+++ b/src/style/InfoBox.css
@@ -1,1 +1,23 @@
-/* No CSS *//*# sourceMappingURL=InfoBox.css.map */
+.infoBox {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+}
+
+.infoBox:not(:last-child) {
+  margin-right: 1vw;
+}
+
+.infoBox__cases {
+  font-weight: 600;
+  font-size: 1.5rem;
+  margin-bottom: 0.5rem;
+}
+
+.infoBox__total {
+  color: #6c757d;
+  font-weight: 700 !important;
+  font-size: 1rem !important;
+  margin-top: 1rem !important;
+}
+/*# sourceMappingURL=InfoBox.css.map */
